# MIT-MAS665-AssignmentsHW-5

./: .gitignore  README.md
multi_agent_debate/: README.md  env_example  generate_deliverables.py  main.py  pyproject.toml  requirements.txt  run_tests.py
multi_agent_debate/Deliverables/: proof_of_execution.md
multi_agent_debate/experiments/results/: 1_round_20251025_133124.json  1_round_20251025_133646.json  2_agents_20251025_132826.json  2_agents_20251025_133255.json  3_rounds_20251025_133352.json  3_rounds_20251025_133858.json  4_agents_20251025_133010.json  4_agents_20251025_133533.json  complete_results_20251025_134229.json  complete_results_20251025_135002.json  high_temperature_20251025_134229.json  high_temperature_20251025_135002.json  low_temperature_20251025_134004.json  low_temperature_20251025_134710.json  with_devils_advocate_20251025_133752.json  with_devils_advocate_20251025_134436.json  without_devils_advocate_20251025_133553.json  without_devils_advocate_20251025_134138.json
multi_agent_debate/src/: __init__.py  debate_system.py
multi_agent_debate/src/agents/: __init__.py  base.py  critic.py  devils_advocate.py  judge.py  researcher.py  synthesizer.py
multi_agent_debate/src/evaluation/: __init__.py  rubric.py
multi_agent_debate/src/experiments/: __init__.py  runner.py
multi_agent_debate/src/utils/: __init__.py  config.py
multi_agent_debate/src/workflow/: __init__.py  debate_graph.py
multi_agent_debate/testing/: __init__.py
multi_agent_debate/testing/integration/: test_debate_system.py
multi_agent_debate/testing/unit/: test_agents.py  (+3 more)
(+7 files in other folders)
